--- a/docs/content/schema-server.mdx
+++ b/docs/content/schema-server.mdx
@@ -13,4 +13,118 @@ The server can support multiple projects, loaded in a variety of different ways:
  * Reading projects from remote git repositories
  * Polling Swagger / OpenAPI endpoints, converting their schemas to Taxi
 
+## Configuring schema repositories
+Schemas can be pulled from multiple different formats and approaches.  The configuration for these
+repositories is defined in a [HOCON](https://github.com/lightbend/config#examples-of-hocon) format file.
 
+This file is loaded from `repositories.conf`.  The location of the file can be changed by setting `--vyne.repositories.config-file=/path/to/repositories.conf`
+on the command line, or through any of the supported configuration overriding mechanisms.
+
+### Configuration conventions
+Durations are defined using [ISO 8601](https://en.wikipedia.org/wiki/ISO_8601#Durations) formats.  For example:
+ * 1 Day = `P1D`
+ * 3 Seconds = `PT3S`
+
+
+## File repositories
+File repositories watch a path local to the server. Changes made locally are detected
+and trigger a republication of the schema, optionally incrementing the patch version
+of the project.
+
+| Config parameter               | Description                                                                                                      | Default setting    |
+|--------------------------------|------------------------------------------------------------------------------------------------------------------|--------------------|
+| `changeDetectionMethod`        | The method for detecting changes - `WATCH` or `POLL`                                                             | `WATCH`            |
+| `incrementVersionOnChange`     | Determines if the patch version should be incremented when publishing detected changes                           | `false`            |
+| `pollFrequency`                | The frequency for polling the local file system for changes, if running in `POLL` mode                           | `PT5S` (5 seconds) |
+| `recompilationFrequencyMillis` | Specifies the frequency that changes are recompiled when using a `WATCH` changeDetectionMethod.                  | `PT1S` (1 second)  |
+| `paths`                        | A list of paths containing taxi projects.  Must point to the root of the project (containing a `taxi.conf` file) | Empty              |
+
+
+### Sample
+
+```hocon
+file {
+   changeDetectionMethod=WATCH
+   incrementVersionOnChange=false
+   paths=[
+      "/path/to/project"
+   ]
+   pollFrequency=PT5S
+   recompilationFrequencyMillis=PT3S
+}
+```
+## OpenApi repositories
+
+TODO
+
+### Sample
+
+```hocon
+openApi {
+   pollFrequency=PT20S
+   services=[
+      {
+         connectTimeout="PT0.5S"
+         defaultNamespace="com.foo.bar"
+         name=some-service
+         readTimeout=PT2S
+         uri="https://foo.com/swagger.json"
+      }
+   ]
+}
+```
+
+## Git repositories
+
+### Sample
+```hocon
+git {
+   checkoutRoot="/my/git/root"
+   pollFrequency=PT30S
+   repositories=[
+      {
+         branch=master
+         name=my-git-project
+         uri="https://github.com/something.git"
+      }
+   ]
+}
+```
+
+## Kitchen sink configuration example
+
+```hocon
+file {
+   changeDetectionMethod=WATCH
+   incrementVersionOnChange=false
+   paths=[
+      "/path/to/project"
+   ]
+   pollFrequency=PT5S
+   recompilationFrequencyMillis=PT3S
+}
+git {
+   checkoutRoot="/my/git/root"
+   pollFrequency=PT30S
+   repositories=[
+      {
+         branch=master
+         name=my-git-project
+         uri="https://github.com/something.git"
+      }
+   ]
+}
+openApi {
+   pollFrequency=PT20S
+   services=[
+      {
+         connectTimeout="PT0.5S"
+         defaultNamespace="com.foo.bar"
+         name=some-service
+         readTimeout=PT2S
+         uri="https://foo.com/swagger.json"
+      }
+   ]
+}
+
+```
