Remove TODO files, update overview pic

--- a/docs/content/overview/README.mdx
+++ b/docs/content/overview/README.mdx
@@ -13,7 +13,7 @@ Vyne addresses this by automaticlly building and maintaining the integration bet
 
 Vyne turns integration inside-out, allowing clients to ask for the data they need, without worrying about where it comes from. This means that as API's evolve, or as services are deployed or replaced, Vyne's automated integrations automatically adapt, without requiring clients to change.
 
-![Vyne provides automated API orchestration](/assets/documentation-images.png)
+![Vyne provides automated API orchestration](./assets/overview.png)
 
 By using Vyne's automated integration, brittle service-to-service code is replaced with Vyne's integration API, allowing simple semantic discovery of data.
 
