--- a/docs/content/querying-with-vyne/query-profiler.mdx
+++ b/docs/content/querying-with-vyne/query-profiler.mdx
@@ -5,7 +5,7 @@ description: Understand what happened when Vyne executed a query
 
 Vyne captures details of all the calls that are made during a query.
 
-Note: This must be enabled via the `vyne.history.persist-results` setting.  See query-history for more details.
+Note: This must be enabled via the `vyne.analytics.persist-results` setting.  See query-history for more details.
 
 If enabled, "Profiler" tab will be visible in the query results display.
 
@@ -14,7 +14,7 @@ Vyne produces sequence diagrams that show the services that were called.
 
 ![sequence diagram](sequence-diagram.png)
 
-Clicking on any of the rows shows the actual query that was sent and response received.  (requires `vyne.history.persist-remote-call-responses` to be enabled)
+Clicking on any of the rows shows the actual query that was sent and response received.  (requires `vyne.analytics.persist-remote-call-responses` to be enabled)
 
 ![response details](response-details.png)
 
