--- a/docs/content/release-notes/inprogress/history-service.mdx
+++ b/docs/content/release-notes/inprogress/history-service.mdx
@@ -17,7 +17,7 @@ The configuration option to use either Vyne query server or Vyne History Server 
 
 | Config parameter                | Description                                                                                        | Default setting             |
 |---------------------------------|----------------------------------------------------------------------------------------------------|-----------------------------|
-| `vyne.history.mode`             | Defines whether history data is persisted by vyne query server or by vyne history server (possible values `inprocess` or `remote`)         | `inprocess` |
+| `vyne.analytics.mode`             | Defines whether history data is persisted by vyne query server or by vyne history server (possible values `inprocess` or `remote`)         | `inprocess` |
 
 
 
