--- a/docs/content/querying-with-vyne/query-history.mdx
+++ b/docs/content/querying-with-vyne/query-history.mdx
@@ -26,11 +26,11 @@ This feature must be enabled in your vyne configuration.
 
 | Config parameter                | Description                                                                                        | Default setting             |
 |---------------------------------|----------------------------------------------------------------------------------------------------|-----------------------------|
-| `vyne.history.persist-results`               | Defines if results of queries should be persisted.                                                 | `false`                     |
-| `vyne.history.persist-remote-call-responses` | Defines if results from remote calls should be captured and stored in the history.                 | `false`                     |
-| `vyne.history.max-payload-size-in-bytes`     | When request results are being captured, defines the maximum size (in bytes) of a payload to store | 2048                        |
-| `vyne.history.persistence-queue-store-path`  | Defines where Vyne queues history data waiting to be persisted                                    | `./historyPersistenceQueue` |
-| `vyne.history.mode`                          | Defines whether history data is persisted by vyne query server or by vyne history server (possible values `inprocess` or `remote`)         | `inprocess` |
+| `vyne.analytics.persist-results`               | Defines if results of queries should be persisted.                                                 | `false`                     |
+| `vyne.analytics.persist-remote-call-responses` | Defines if results from remote calls should be captured and stored in the history.                 | `false`                     |
+| `vyne.analytics.max-payload-size-in-bytes`     | When request results are being captured, defines the maximum size (in bytes) of a payload to store | 2048                        |
+| `vyne.analytics.persistence-queue-store-path`  | Defines where Vyne queues history data waiting to be persisted                                    | `./historyPersistenceQueue` |
+| `vyne.analytics.mode`                          | Defines whether history data is persisted by vyne query server or by vyne analytics server (possible values `inprocess` or `remote`)         | `inprocess` |
 
 
 
