docs: roll back to gatsby 3

--- a/docs/content/release-notes/0.19.3.mdx
+++ b/docs/content/release-notes/0.19.3.mdx
@@ -1,8 +1,7 @@
 ---
 title: 0.19.3
+description: Release notes
 ---
-
-import { Link } from 'gatsby';
 
 0.19.3 is a patch release, containing only one bug fix and updates to Vyne configuration settings for embedded vyne and applications publishing schemas.
 
