updated architecture image

--- a/docs/content/tutorials/api-db-integration/rest-db-integration.mdx
+++ b/docs/content/tutorials/api-db-integration/rest-db-integration.mdx
@@ -226,7 +226,7 @@ make calls to it as needed.
 
 </Callout>
 
-## Run some queries
+## Integrating services & loading data
 
 Now that everything is set up, let's fetch and integrate some data.
 
