--- a/docs/content/reference/schema-server/schema-server.mdx
+++ b/docs/content/reference/schema-server/schema-server.mdx
@@ -1,6 +1,6 @@
 ---
-title: Schema Server
-description: Learn how to launch schema server
+title: Vyne Schema Server
+description: Reference documentation on the Vyne Schema Server
 ---
 
 ## Overview
@@ -13,20 +13,40 @@ The server can support multiple projects, loaded in a variety of different ways:
  * Reading projects from remote git repositories
  * Polling Swagger / OpenAPI endpoints, converting their schemas to Taxi
 
-## Configuring schema repositories
+## Publishing external schemas
+Systems can directly publish their schemas to the schema server on demand.
+This approach is favoured where possible, as it means the publishing system
+controls when to push changes.
+
+### Schema Keep-alive
+When a system publishes it's schema, it must inform the schema server how long the schema
+remains current for.    This is known as the keep-alive.  When a schema fails it's keep-alive
+tests, then the schema server removes the schema from the current aggregated schema.
+
+The mechanisms for defining a keep alive vary depending on how the schemas themselves are published.
+
+### Publishing via HTTP
+
+### Publishing via RSocket
+
+
+## Schema server monitored projects
+Rather than [systems pushing their schemas directly](#publishing-external-schemas) to the schema server, the schema server can be
+configured to watch / poll different types of schemas.
+
 Schemas can be pulled from multiple different formats and approaches.  The configuration for these
 repositories is defined in a [HOCON](https://github.com/lightbend/config#examples-of-hocon) format file.
 
 This file is loaded from `repositories.conf`.  The location of the file can be changed by setting `--vyne.repositories.config-file=/path/to/repositories.conf`
 on the command line, or through any of the supported configuration overriding mechanisms.
 
-### Configuration conventions
+#### Configuration conventions
 Durations are defined using [ISO 8601](https://en.wikipedia.org/wiki/ISO_8601#Durations) formats.  For example:
  * 1 Day = `P1D`
  * 3 Seconds = `PT3S`
 
 
-## File repositories
+### File repositories
 File repositories watch a path local to the server. Changes made locally are detected
 and trigger a republication of the schema, optionally incrementing the patch version
 of the project.
@@ -39,8 +59,7 @@ of the project.
 | `recompilationFrequencyMillis` | Specifies the frequency that changes are recompiled when using a `WATCH` changeDetectionMethod.                  | `PT1S` (1 second)  |
 | `paths`                        | A list of paths containing taxi projects.  Must point to the root of the project (containing a `taxi.conf` file) | Empty              |
 
-
-### Sample
+#### Example
 
 ```hocon
 file {
@@ -53,11 +72,36 @@ file {
    recompilationFrequencyMillis=PT3S
 }
 ```
-## OpenApi repositories
 
-TODO
+### Allowing edits from Vyne to a repository
+Many of Vyne's UI features allow edits to types and importing of schemas.
 
-### Sample
+These updates are sent to the Schema server, which will persist the edits into a Taxi project.
+Currently, only persisting edits into a file repository are supported, with Git repositories
+coming soon.
+
+To enable edits into a project, specify a path as the `apiEditorProjectPath`.
+Note that this must be a path of a project already configured elsewhere in the project configuration.
+
+The schema server only supports pushing edits to a single project at this time.
+
+#### Example with editable path
+```hocon
+file {
+   paths=[
+      "/path/to/project"
+   ]
+   apiEditorProjectPath: "path/to/project"
+}
+```
+
+### OpenApi projects
+Vyne can be configured to poll an OpenAPI or Swagger definition.
+
+These definitions can be optionally enriched with [Taxi extensions](https://docs.taxilang.org/generating-taxi-from-source/#swagger--openapi) to describe
+the semantic types present in model definitions
+
+#### Example
 
 ```hocon
 openApi {
@@ -74,9 +118,15 @@ openApi {
 }
 ```
 
-## Git repositories
+### Git repositories
+In production, rather than using a [local file system](#file-repositories), it's common
+to use a git repository.  This allows the use of standard git workflows to promote
+changes to 'production'.
 
-### Sample
+The schema server will periodically poll a git repository and branch, and pull in
+any changes as they're detected
+
+#### Example
 ```hocon
 git {
    checkoutRoot="/my/git/root"
@@ -128,3 +178,9 @@ openApi {
 }
 
 ```
+
+## Consuming schemas from the schema server
+
+### Consuming via HTTP
+
+### Consuming via RSocket
